--- a/.github/workflows/actions/setup_node-cache_dep-install_dep/action.yml
+++ b/.github/workflows/actions/setup_node-cache_dep-install_dep/action.yml
@@ -8,15 +8,8 @@ runs:
       uses: actions/setup-node@v3
       with:
         node-version: '18.x'
-
-    - name: Cache dependencies ⚡
-      id: cache_dependencies
-      uses: actions/cache@v3
-      with:
-        path: node_modules
-        key: node-modules-${{ hashFiles('package-lock.json') }}
+        cache: 'npm'
 
     - name: Install dependencies 🔧
       shell: bash
-      if: steps.cache_dependencies.outputs.cache-hit != 'true'
       run: npm ci
