--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
+      # - name: Disable jekyll
+      #   run: touch .nojekyll
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
