--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,61 @@ on:
     branches:
       - main
 
+env:
+  CACHE_PATHS_BUILD: |
+    ./website/build
+  CACHE_KEY_BUILD: build-${{ github.sha }}-${{ github.ref_type }}
+
 jobs:
+  build:
+      name: Build 🏗️
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout 🛎️
+          uses: actions/checkout@v3
+
+        - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
+          uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+
+        - name: Build 🏗️
+          run: npm run build
+
+        - name: Cache build ⚡
+          id: cache_build
+          uses: actions/cache@v3
+          with:
+            path: ${{ env.CACHE_PATHS_BUILD }}
+            key: ${{ env.CACHE_KEY_BUILD }}
+
+  lint:
+    name: Lint ✅
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
+        uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+
+      - name: Lint ✅
+        run: npm run lint
+
+  tsc:
+    name: TypeScript Compiler 🔎
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
+        uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+
+      - name: TypeScript Compiler 🔎
+        run: npm run tsc
+
   deploy:
     name: Deploy 🚀
     runs-on: ubuntu-latest
@@ -14,12 +68,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      # - name: Disable jekyll
-      #   run: touch .nojekyll
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.CACHE_PATHS_BUILD }}
+          key: ${{ env.CACHE_KEY_BUILD }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: .
+          folder: website/build
           clean: true
