--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,8 +62,9 @@ jobs:
 
   deploy:
     name: Deploy 🚀
+    needs: [build, lint, tsc]
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
