--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,10 @@ env:
     ./website/build
   CACHE_KEY_BUILD: build-${{ github.sha }}-${{ github.ref_type }}
 
+defaults:
+ run:
+  working-directory: ./website
+
 jobs:
   build:
       name: Build 🏗️
@@ -19,8 +23,11 @@ jobs:
         - name: Checkout 🛎️
           uses: actions/checkout@v3
 
-        - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
-          uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+        - name: Setup Node.js ⚙️
+          uses: ./.github/workflows/actions/setup_node
+
+        - name: Install dependencies 🔧
+          run: npm ci
 
         - name: Build 🏗️
           run: npm run build
@@ -40,8 +47,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
-        uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+      - name: Setup Node.js ⚙️
+        uses: ./.github/workflows/actions/setup_node
+
+      - name: Install dependencies 🔧
+        run: npm ci
 
       - name: Lint ✅
         run: npm run lint
@@ -54,8 +64,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
-        uses: ./.github/workflows/actions/setup_node-cache_dep-install_dep
+      - name: Setup Node.js ⚙️
+        uses: ./.github/workflows/actions/setup_node
+
+      - name: Install dependencies 🔧
+        run: npm ci
 
       - name: TypeScript Compiler 🔎
         run: npm run tsc
@@ -64,7 +77,7 @@ jobs:
     name: Deploy 🚀
     needs: [build, lint, tsc]
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
