--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,11 +58,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "./website"
 
-      - name: Install dependencies 🔧
-        run: npm ci
+      # - name: Install dependencies 🔧
+      #   run: npm ci
 
-      - name: Lint ✅
-        run: npm run lint
+      # - name: Lint ✅
+      #   run: npm run lint
 
   tsc:
     name: TypeScript Compiler 🔎
@@ -79,11 +79,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "./website"
 
-      - name: Install dependencies 🔧
-        run: npm ci
+      # - name: Install dependencies 🔧
+      #   run: npm ci
 
-      - name: TypeScript Compiler 🔎
-        run: npm run tsc
+      # - name: TypeScript Compiler 🔎
+      #   run: npm run tsc
 
   deploy:
     name: Deploy 🚀
