--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-style-guide",
+  "name": "typescript-style-guide-website",
   "version": "0.0.0",
   "private": true,
   "scripts": {
