--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,7 +3,16 @@
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "moduleResolution": "Node16"
+    "moduleResolution": "Node16",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
   "include": [".", ".eslintrc.js"],
   "exclude": ["node_modules", ".next"]
