--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "1.6.22",
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
+    "react-animate-height": "3.2.2",
     "react-dom": "17.0.2",
     "react-parallax-tilt": "1.7.156"
   },
