--- a/website/package.json
+++ b/website/package.json
@@ -33,6 +33,7 @@
     "@tsconfig/docusaurus": "1.0.5",
     "@typescript-eslint/eslint-plugin": "6.3.0",
     "@typescript-eslint/parser": "6.3.0",
+    "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.5.5",
@@ -40,7 +41,9 @@
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "7.33.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "postcss": "8.4.27",
     "prettier": "3.0.1",
+    "tailwindcss": "3.3.3",
     "typescript": "4.7.4"
   },
   "browserslist": {
