--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.27",
     "prettier": "3.0.1",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "4.7.4"
   },
