--- a/website/.prettierrc
+++ b/website/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "all",
-  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "importOrder": ["^@docusaurus|@theme/(.*)$", "^@theme/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
