--- a/website/.prettierrc
+++ b/website/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": ["^@docusaurus|@theme/(.*)$", "^@theme/(.*)$", "^[./]"],
+  "importOrder": ["^@docusaurus|@theme/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
