--- a/website/package.json
+++ b/website/package.json
@@ -15,16 +15,17 @@
     "lint-fix": "eslint --fix .",
     "tsc": "tsc -p tsconfig.json",
     "format-lint": "prettier --config .prettierrc --check --ignore-unknown .",
-    "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l ."
+    "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l .",
+    "clean": "shx rm -rf node_modules coverage dist compiled build .docusaurus"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
-    "@mdx-js/react": "1.6.22",
+    "@docusaurus/core": "0.0.0-5642",
+    "@docusaurus/preset-classic": "0.0.0-5642",
+    "@mdx-js/react": "^2",
     "prism-react-renderer": "1.3.5",
-    "react": "17.0.2",
+    "react": "^18",
     "react-animate-height": "3.2.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18",
     "react-parallax-tilt": "1.7.163"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "postcss": "8.4.28",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "0.5.3",
+    "shx": "0.3.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
