--- a/website/package.json
+++ b/website/package.json
@@ -19,9 +19,9 @@
     "clean": "shx rm -rf node_modules coverage dist compiled build .docusaurus"
   },
   "dependencies": {
-    "@docusaurus/core": "0.0.0-5642",
-    "@docusaurus/preset-classic": "0.0.0-5642",
-    "@mdx-js/react": "^2",
+    "@docusaurus/core": "0.0.0-5658",
+    "@docusaurus/preset-classic": "0.0.0-5658",
+    "@mdx-js/react": "2.3.0",
     "prism-react-renderer": "1.3.5",
     "react": "^18",
     "react-animate-height": "3.2.2",
