--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,32 +16,32 @@ defaults:
 
 jobs:
   build:
-      name: Build 🏗️
-      runs-on: ubuntu-latest
+    name: Build 🏗️
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout 🛎️
-          uses: actions/checkout@v3
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
 
-        - name: Setup Node.js ⚙️
-          uses: actions/setup-node@v3
-          with:
-            node-version: '18.x'
-            cache: 'npm'
-            cache-dependency-path: "./website"
+      - name: Setup Node.js ⚙️
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          cache: "npm"
+          cache-dependency-path: "./website"
 
-        - name: Install dependencies 🔧
-          run: npm ci
+      - name: Install dependencies 🔧
+        run: npm ci
 
-        - name: Build 🏗️
-          run: npm run build
+      - name: Build 🏗️
+        run: npm run build
 
-        - name: Cache build ⚡
-          id: cache_build
-          uses: actions/cache@v3
-          with:
-            path: ${{ env.CACHE_PATHS_BUILD }}
-            key: ${{ env.CACHE_KEY_BUILD }}
+      - name: Cache build ⚡
+        id: cache_build
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.CACHE_PATHS_BUILD }}
+          key: ${{ env.CACHE_KEY_BUILD }}
 
   lint:
     name: Lint ✅
@@ -49,13 +49,13 @@ jobs:
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-          cache: 'npm'
+          node-version: "18.x"
+          cache: "npm"
           cache-dependency-path: "./website"
 
       - name: Install dependencies 🔧
@@ -70,13 +70,13 @@ jobs:
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-          cache: 'npm'
+          node-version: "18.x"
+          cache: "npm"
           cache-dependency-path: "./website"
 
       - name: Install dependencies 🔧
@@ -92,7 +92,7 @@ jobs:
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - uses: actions/cache@v3
         with:
