--- a/website/package.json
+++ b/website/package.json
@@ -19,8 +19,8 @@
     "clean": "shx rm -rf node_modules coverage dist compiled build .docusaurus"
   },
   "dependencies": {
-    "@docusaurus/core": "0.0.0-5658",
-    "@docusaurus/preset-classic": "0.0.0-5658",
+    "@docusaurus/core": "3.0.0-beta.0",
+    "@docusaurus/preset-classic": "3.0.0-beta.0",
     "@mdx-js/react": "2.3.0",
     "prism-react-renderer": "1.3.5",
     "react": "18.2.0",
