--- a/website/package.json
+++ b/website/package.json
@@ -19,8 +19,8 @@
     "clean": "rm -rf node_modules coverage dist compiled build .docusaurus"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0-rc.0",
-    "@docusaurus/preset-classic": "3.0.0-rc.0",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
     "@mdx-js/react": "2.3.0",
     "prism-react-renderer": "1.3.5",
     "react": "18.2.0",
@@ -32,8 +32,8 @@
     "@docusaurus/module-type-aliases": "2.4.3",
     "@trivago/prettier-plugin-sort-imports": "4.2.1",
     "@tsconfig/docusaurus": "1.0.5",
-    "@typescript-eslint/eslint-plugin": "6.9.0",
-    "@typescript-eslint/parser": "6.9.0",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
