--- a/website/package.json
+++ b/website/package.json
@@ -21,17 +21,18 @@
   "dependencies": {
     "@docusaurus/core": "3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
-    "@mdx-js/react": "2.3.0",
-    "prism-react-renderer": "1.3.5",
+    "@mdx-js/react": "3.0.0",
+    "prism-react-renderer": "2.1.0",
     "react": "18.2.0",
     "react-animate-height": "3.2.2",
     "react-dom": "18.2.0",
     "react-parallax-tilt": "1.7.172"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
+    "@docusaurus/module-type-aliases": "3.0.0",
+    "@docusaurus/tsconfig": "3.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.2.1",
-    "@tsconfig/docusaurus": "1.0.5",
+    "@types/react": "18.2.33",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
     "autoprefixer": "10.4.16",
