--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,7 +3,8 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "moduleResolution": "Node16",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,7 +12,6 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "Node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "target": "ES6"
