--- a/website/package.json
+++ b/website/package.json
@@ -31,12 +31,12 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.5.2",
     "@docusaurus/tsconfig": "3.5.2",
+    "@eslint/js": "9.12.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/eslint__js": "8.42.3",
     "@types/react": "18.3.11",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
     "autoprefixer": "10.4.20",
-    "eslint": "8.57.0",
+    "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "5.2.1",
@@ -46,7 +46,8 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.14",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.10.0"
   },
   "browserslist": {
     "production": [
