--- a/website/.prettierrc
+++ b/website/.prettierrc
@@ -2,8 +2,5 @@
   "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "all",
-  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": ["^@docusaurus|@theme/(.*)$", "^[./]"],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
