--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "@docusaurus/core": "3.6.3",
     "@docusaurus/preset-classic": "3.6.3",
     "@mdx-js/react": "3.1.0",
+    "clsx": "2.1.1",
     "prism-react-renderer": "2.4.1",
     "react": "18.3.1",
     "react-animate-height": "3.2.3",
