--- a/website/package.json
+++ b/website/package.json
@@ -27,7 +27,8 @@
     "react": "18.3.1",
     "react-animate-height": "3.2.3",
     "react-dom": "18.3.1",
-    "react-parallax-tilt": "1.7.266"
+    "react-parallax-tilt": "1.7.266",
+    "tailwind-merge": "2.5.5"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.3",
