--- a/website/package.json
+++ b/website/package.json
@@ -28,24 +28,23 @@
     "react-animate-height": "3.2.3",
     "react-dom": "19.1.0",
     "react-parallax-tilt": "1.7.294",
-    "tailwind-merge": "2.6.0"
+    "tailwind-merge": "3.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
     "@docusaurus/tsconfig": "3.7.0",
     "@eslint/js": "9.25.1",
+    "@tailwindcss/postcss": "4.1.5",
     "@types/react": "19.1.2",
-    "autoprefixer": "10.4.21",
     "eslint": "9.25.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "5.2.6",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.5",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1"
   },
